[package]
name = "wrccdc-archive-downloader"
version = "1.0.1"
edition = "2021"
publish = false

[dependencies]
futures-util = { version = "0.3", default-features = false }
indicatif = "0.17"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "http3", "stream"] }
select = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs" ] }
